--- a/fleet.yaml
+++ b/fleet.yaml
@@ -12,4 +12,5 @@ diff:
       name: cluster
       namespace: fleet-default
       operations:
-        - {"op": "remove", "path": "/spec/rkeConfig/machinePools"}
+        - {"op": "remove", "path": "/spec/rkeConfig/machinePools[0]"}
+        - {"op": "remove", "path": "/spec/rkeConfig/machinePools[1]"}
