--- a/fleet.yaml
+++ b/fleet.yaml
@@ -5,12 +5,12 @@ helm:
   version: 0.1.3
   valuesFiles: 
     - values.yaml
-# diff:
-#   comparePatches:
-#     - apiVersion: provisioning.cattle.io/v1
-#       kind: Cluster
-#       name: cluster
-#       namespace: fleet-default
-#       operations:
-#         - {"op": "remove", "path": "/spec/rkeConfig/machinePools/0/paused"}
-#         - {"op": "remove", "path": "/spec/rkeConfig/machinePools/1/paused"}
+diff:
+  comparePatches:
+    - apiVersion: provisioning.cattle.io/v1
+      kind: Cluster
+      name: cluster
+      namespace: fleet-default
+      operations:
+        - {"op": "remove", "path": "/spec/rkeConfig/machinePools/0/dynamicSchemaSpec"}
+        - {"op": "remove", "path": "/spec/rkeConfig/machinePools/1/dynamicSchemaSpec"}
