--- a/fleet.yaml
+++ b/fleet.yaml
@@ -2,17 +2,17 @@ defaultNamespace: default
 helm:
   releaseName: cluster
   chart: oci://harbor.lan.ping6.nl/helm/rancher-vsphere-cluster
-  version: 0.1.4
+  version: 0.1.5
   valuesFiles: 
     - values.yaml
 
-diff:
-  comparePatches:
-    - apiVersion: provisioning.cattle.io/v1
-      kind: Cluster
-      name: cluster
-      namespace: fleet-default
-      operations:
-        # - {"op": "remove", "path": "/spec/rkeConfig/machinePools/0/workerRole"}
-        - {"op": "remove", "path": "/spec/rkeConfig/machinePools/1/etcdRole"}
-        - {"op": "remove", "path": "/spec/rkeConfig/machinePools/1/controlPlaneRole"}
+# diff:
+#   comparePatches:
+#     - apiVersion: provisioning.cattle.io/v1
+#       kind: Cluster
+#       name: cluster
+#       namespace: fleet-default
+#       operations:
+#         # - {"op": "remove", "path": "/spec/rkeConfig/machinePools/0/workerRole"}
+#         - {"op": "remove", "path": "/spec/rkeConfig/machinePools/1/etcdRole"}
+#         - {"op": "remove", "path": "/spec/rkeConfig/machinePools/1/controlPlaneRole"}
